# django_store

./: .env.sample  README.md  groups.json  pyproject.toml
blog/: forms.py  models.py  views.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json
catalog/management/commands/: fill_catalog.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0002_product_manufactured_at.py  0003_alter_product_preview.py  0004_alter_product_preview.py  0005_version.py  0006_product_owner.py  0007_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  create_product.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: footer.html  header.html
catalog/templatetags/: catalog_tags.py
config/: settings.py  urls.py
static/css/: styles.css
users/: admin.py  forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: password_change_form.html  password_reset_form.html  user_form.html
