[tool.poetry]
name = "django-store"
version = "0.1.0"
description = ""
authors = ["Dimanskr <dimanskr2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
pytils = "^0.4.1"
django-bootstrap5 = "^24.3"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.47"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
